[Services](update) Test Files and Dependency Injection

--- a/LAKAPSAGAP.BlazorServer/LAKAPSAGAP.BlazorServer.csproj
+++ b/LAKAPSAGAP.BlazorServer/LAKAPSAGAP.BlazorServer.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Radzen.Blazor" Version="5.3.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LAKAPSAGAP.Models\LAKAPSAGAP.Models.csproj" />
+    <ProjectReference Include="..\LAKAPSAGAP.Services\LAKAPSAGAP.Services.csproj" />
+  </ItemGroup>
+
 </Project>
