--- a/LAKAPSAGAP.Services/LAKAPSAGAP.Services.csproj
+++ b/LAKAPSAGAP.Services/LAKAPSAGAP.Services.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Core\" />
-    <Folder Include="Repositories\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LAKAPSAGAP.Models\LAKAPSAGAP.Models.csproj" />
   </ItemGroup>
 
 </Project>
