--- a/LAKAPSAGAP.Services/LAKAPSAGAP.Services.csproj
+++ b/LAKAPSAGAP.Services/LAKAPSAGAP.Services.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\LAKAPSAGAP.Models\LAKAPSAGAP.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\NewFolder\" />
+  </ItemGroup>
+
 </Project>
