[BlazorServer](update) Added Vite and Swal2

--- a/LAKAPSAGAP.BlazorServer/LAKAPSAGAP.BlazorServer.csproj
+++ b/LAKAPSAGAP.BlazorServer/LAKAPSAGAP.BlazorServer.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Radzen.Blazor" Version="5.3.5" />
+    <PackageReference Include="Vite.AspNetCore" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
