--- a/LAKAPSAGAP.BlazorServer/appsettings.Development.json
+++ b/LAKAPSAGAP.BlazorServer/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "DetailedErrors": true,
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "Vite": {
+        "Server": {
+            "Enabled": true,
+            "Port": 5173,
+            "Https": true,
+            "AutoRun": true
+        }
     }
-  }
 }
