--- a/LAKAPSAGAP.BlazorServer/wwwroot/.vite/manifest.json
+++ b/LAKAPSAGAP.BlazorServer/wwwroot/.vite/manifest.json
@@ -1,26 +1,19 @@
 {
-  "_lib-!~{003}~.chunk.min.js": {
-    "file": "css/lib-U_b-ZeMd.bundle.min.css",
-    "src": "_lib-!~{003}~.chunk.min.js"
-  },
-  "_lib-wjeBjLej.chunk.min.js": {
-    "file": "js/lib-wjeBjLej.chunk.min.js",
-    "name": "lib",
-    "css": [
-      "css/lib-U_b-ZeMd.bundle.min.css"
-    ]
+  "_lib-DMamsmlf.chunk.min.js": {
+    "file": "js/lib-DMamsmlf.chunk.min.js",
+    "name": "lib"
   },
   "scripts/app.js": {
-    "file": "js/app-BtwfR1Ap.bundle.min.js",
+    "file": "js/app-CQfuD0Wh.bundle.min.js",
     "name": "app",
     "src": "scripts/app.js",
     "isEntry": true,
     "imports": [
-      "_lib-wjeBjLej.chunk.min.js"
+      "_lib-DMamsmlf.chunk.min.js"
     ]
   },
   "styles/app.scss": {
-    "file": "css/app-DMPHM8pR.bundle.min.css",
+    "file": "css/app-v7TPqIS4.bundle.min.css",
     "src": "styles/app.scss",
     "isEntry": true
   }
