(update) AppSettings changes

--- a/LAKAPSAGAP.BlazorServer/appsettings.Development.json
+++ b/LAKAPSAGAP.BlazorServer/appsettings.Development.json
@@ -6,6 +6,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+     "ConnectionStrings": {
+        "Default": "Server=159.65.5.5;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;TrustServerCertificate=True;"
+    },
     "Vite": {
         "Server": {
             "Enabled": true,
