--- a/LAKAPSAGAP.BlazorServer/appsettings.json
+++ b/LAKAPSAGAP.BlazorServer/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "Default": "Server=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=B1Admin;TrustServerCertificate=True;"
+        "Default": "Server=159.65.5.5;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;TrustServerCertificate=True;"
     },
     "AllowedHosts": "*"
 
