--- a/LAKAPSAGAP.Services/LAKAPSAGAP.Services.csproj
+++ b/LAKAPSAGAP.Services/LAKAPSAGAP.Services.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Core\NewFolder\**" />
+    <EmbeddedResource Remove="Core\NewFolder\**" />
+    <None Remove="Core\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
@@ -24,10 +30,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LAKAPSAGAP.Models\LAKAPSAGAP.Models.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Core\NewFolder\" />
   </ItemGroup>
 
 </Project>
