--- a/LAKAPSAGAP.BlazorServer/LAKAPSAGAP.BlazorServer.csproj
+++ b/LAKAPSAGAP.BlazorServer/LAKAPSAGAP.BlazorServer.csproj
@@ -7,13 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="wwwroot\NewFolder\**" />
-    <Content Remove="wwwroot\NewFolder\**" />
-    <EmbeddedResource Remove="wwwroot\NewFolder\**" />
-    <None Remove="wwwroot\NewFolder\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
@@ -21,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Radzen.Blazor" Version="5.3.5" />
+    <PackageReference Include="Vite.AspNetCore" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,7 +24,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Attachments\" />
-    <Folder Include="wwwroot\scripts\" />
+    <Folder Include="wwwroot\NewFolder\" />
   </ItemGroup>
 
 </Project>
