(update) attachment upload
-fixed where attachment directory is missing and throwing error

--- a/LAKAPSAGAP.BlazorServer/LAKAPSAGAP.BlazorServer.csproj
+++ b/LAKAPSAGAP.BlazorServer/LAKAPSAGAP.BlazorServer.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\Attachments\**" />
     <Compile Remove="wwwroot\NewFolder\**" />
+    <Content Remove="wwwroot\Attachments\**" />
     <Content Remove="wwwroot\NewFolder\**" />
+    <EmbeddedResource Remove="wwwroot\Attachments\**" />
     <EmbeddedResource Remove="wwwroot\NewFolder\**" />
+    <None Remove="wwwroot\Attachments\**" />
     <None Remove="wwwroot\NewFolder\**" />
   </ItemGroup>
 
@@ -29,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Attachments\" />
+    <Folder Include="wwwroot\NewFolder1\" />
     <Folder Include="wwwroot\scripts\" />
   </ItemGroup>
 
