--- a/LAKAPSAGAP.BlazorServer/appsettings.json
+++ b/LAKAPSAGAP.BlazorServer/appsettings.json
@@ -1,13 +1,12 @@
 {
     "Logging": {
         "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
+            "Default": "Information"
         }
     },
-    "ConnectionStrings": {
-        "Default": "Server=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=B1Admin;TrustServerCertificate=True;"
-    },
+  "ConnectionStrings": {
+    "Default": "Data Source=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;TrustServerCertificate=True;"
+  },
     "AllowedHosts": "*"
 
 }
