--- a/LAKAPSAGAP.BlazorServer/appsettings.Development.json
+++ b/LAKAPSAGAP.BlazorServer/appsettings.Development.json
@@ -5,9 +5,10 @@
             "Default": "Information"
         }
     },
-    "ConnectionStrings": {
-        "Default": "Server=34.87.10.161;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;TrustServerCertificate=True;"
-    },
+  "ConnectionStrings": {
+    "Default": "Data Source=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;TrustServerCertificate=True;",
+    //"Default": "Server=34.87.10.161;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;TrustServerCertificate=True;"
+  },
     "Vite": {
         "Server": {
             "Enabled": true,
