--- a/LAKAPSAGAP.BlazorServer/appsettings.json
+++ b/LAKAPSAGAP.BlazorServer/appsettings.json
@@ -1,12 +1,13 @@
 {
+    "DetailedErrors": true,
     "Logging": {
         "LogLevel": {
             "Default": "Information"
         }
     },
-  "ConnectionStrings": {
-    //"Default": "Data Source=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;TrustServerCertificate=True;"
-    "Default": "Server=34.87.10.161;Database=LAKAPSAGAP_LIVE;User Id=sa;Password=CGHI2024!;TrustServerCertificate=True;"
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        //"Default": "Data Source=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;TrustServerCertificate=True;"
+        "Default": "Server=34.87.10.161;Database=LAKAPSAGAP_LIVE;User Id=sa;Password=CGHI2024!;TrustServerCertificate=True;"
+    },
+    "AllowedHosts": "*"
 }
