fix: appsettings.Development.json Remove VIte

--- a/LAKAPSAGAP.BlazorServer/appsettings.Development.json
+++ b/LAKAPSAGAP.BlazorServer/appsettings.Development.json
@@ -5,16 +5,10 @@
             "Default": "Information"
         }
     },
-  "ConnectionStrings": {
-    "Default": "Data Source=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
-    //"Default": "Server=34.87.10.161;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
-    //"Default": "Server=34.87.10.161;Database=LAKAPSAGAP_LIVE;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
-  },
-    "Vite": {
-        "Server": {
-            "Enabled": true,
-            "Port": 5173,
-            "Https": true,
-            "AutoRun": true
-        }
+    "ConnectionStrings": {
+        "Default": "Data Source=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
+        //"Default": "Server=34.87.10.161;Database=LAKAPSAGAP_LIVE;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
+        //"Default": "Server=34.87.10.161;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
+    },
+    "AllowedHosts": "*",
     }
