--- a/LAKAPSAGAP.BlazorServer/appsettings.Development.json
+++ b/LAKAPSAGAP.BlazorServer/appsettings.Development.json
@@ -5,10 +5,11 @@
             "Default": "Information"
         }
     },
-    "ConnectionStrings": {
-        "Default": "Data Source=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
-        //"Default": "Server=34.87.10.161;Database=LAKAPSAGAP_LIVE;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
-        //"Default": "Server=34.87.10.161;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
-    },
+  "ConnectionStrings": {
+    //"Default": "Data Source=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
+    //"Default": "Data Source=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=Sb1@dbti;Connection Timeout=0;TrustServerCertificate=True;"
+    "Default": "Server=34.87.70.86;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
+    //"Default": "Server=34.87.70.86;Database=LAKAPSAGAP_LIVE;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
+  },
     "AllowedHosts": "*",
     }
