--- a/LAKAPSAGAP.BlazorServer/appsettings.json
+++ b/LAKAPSAGAP.BlazorServer/appsettings.json
@@ -6,9 +6,10 @@
         }
     },
   "ConnectionStrings": {
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=LAKAPSAGAP_TEST;Trusted_Connection=True;MultipleActiveResultSets=true;",
     //"Default": "Data Source=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
     //"Default": "Data Source=localhost;Database=LAKAPSAGAP_TEST;User Id=sa;Password=Sb1@dbti;Connection Timeout=0;TrustServerCertificate=True;"
-    "Default": "Server=34.87.70.86;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
+    //"Default": "Server=34.87.70.86;Database=LAKAPSAGAP_TEST;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
     //"Default": "Server=34.87.70.86;Database=LAKAPSAGAP_LIVE;User Id=sa;Password=CGHI2024!;Connection Timeout=0;TrustServerCertificate=True;"
   },
     "AllowedHosts": "*"
